# habr

./: CMakeLists.txt
HabraProj/: HabraProj.sln
HabraProj/HabraProj/: FileReader.cpp  FileReader.h  HabraProj.vcxproj  HabraProj.vcxproj.filters  Matrix4x4.cpp  Matrix4x4.h  ProjectionMatrix.cpp  ShaderProgram.cpp  ShaderProgram.h  TextureLoader.cpp  TextureLoader.h  habrMain.cpp  main.cpp  stdafx.h
libs_bin/Windows/debug/: freeglut_staticd.lib  glew32sd.lib
libs_bin/Windows/release/: freeglut_static.lib  glew32s.lib
libs_src/glew-1.12.0/: Makefile
shaders/shaders/: DefaultFragmentShader.fs  DefaultVertexShader.vs  FragmentShader.fs  TexturedFragmentShader.fs  TexturedVertexShader.vs  VertexShader.vs  habrVertexShader.vs  habrWaveFragmentShader.fs  habrWaveVertexShader.vs
src/BuggiPlayer/: CMakeLists.txt  ProjectionMatrix.h  ShaderProgram.h  main.cpp
